Fix: Add missing script tag to load React app

--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
 </head>
   <body class="bg-slate-50 text-slate-800 antialiased selection:bg-primary-100 selection:text-primary-900 bg-[radial-gradient(ellipse_at_top_right,_var(--tw-gradient-stops))] from-indigo-100 via-slate-50 to-emerald-50 min-h-screen">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
